--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "rollup -cw",
+    "start": "npm run dev",
     "build": "cross-env NODE_ENV=production npm run lint && rollup -c --watch",
     "lint": "tslint --project tsconfig.json"
   },
