--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "rollup -cw",
     "start": "npm run dev",
     "build": "cross-env NODE_ENV=production npm run lint && rollup -c --watch",
-    "lint": "tslint --project tsconfig.json"
+    "lint": "tslint --project tsconfig.json",
+    "deploy": "gh-pages-with-token -d build"
   },
   "keywords": [
     "react",
@@ -37,6 +38,7 @@
   "dependencies": {
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
+    "gh-pages-with-token": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "rollup-plugin-serve": "^0.4.2",
